# clientapps

./: Cargo.toml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
hackernews/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  tailwind.config.js
hackernews/assets/: .gitignore.br  header.svg.br  tailwind.css.br
hackernews/src/: api.rs  lib.rs  main.rs
hackernews/src/ui/: comment.rs  mod.rs  stories.rs  story_comment.rs  story_item.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: mod.rs
